# scrap

./: .beads  .gitignore  CNC_RESEARCH.md  COFOUNDER.md  Cargo.toml  FUNDING.md  Hackathon.md  PAYMENT_RESEARCH.md  PROPOSAL_AUCTION.md  PROPOSAL_CHANNELS.md  PROPOSAL_HTLC.md  PROPOSAL_PTLC.md  README.md  SCAP.md  SISL.md  SLIDESHOW_NASA.html  STRATEGY.md  TASKLIB.md  WALLET_REQUIREMENTS.md  agent-preamble.md  reviewers.yaml  scrap-task-state-machine.md  verify_test_vectors.py
.beads/: config.yaml  metadata.json
.cargo/: config.toml
demo/: scrap_audit_demo.html  scrap_demo.py  scrap_multihop_demo.html
future/: AUCTION.md  CHANNELS.md
hackathon/: .beads  .gitignore  AGENTS.md  CLAUDE.md  Notes.txt  SCRIPT.md  agent-preamble.md  bench_fec.py  bench_llr_accumulator.py  bench_radio_characterize.py  bench_rlnc.py  bench_test.py  bench_test.sh  conftest.py  demo.py  noaa_apt_rx.py  ota_test.py  pyproject.toml  reviewers.yaml  rf_power.py  run_ota_test.py  sdr_devices.py  sisl_coord.py  sisl_crypto.py  sisl_dsss.py  sisl_dsss_demo.py  sisl_fec.py  sisl_framer.py  sisl_hail_flow.py  sisl_payload.py  sisl_payload_session.py  sisl_rx.py  sisl_sdr.py  sisl_types.py  sparse_rlnc.py  test_demo_output.py  test_ota_test_import.py  test_sdr_devices.py  test_sisl_coord.py  test_sisl_crypto.py  (+9 more)
hackathon/.beads.worktree-backup.1776871151/: metadata.json
hackathon/.github/instructions/: adversarial.instructions.md  coding.instructions.md  crypto.instructions.md  rf.instructions.md
presentations/: Makefile  _theme.css  build-investor.py  serve-investor.py  serve.py
presentations.old/: Makefile  SLIDESHOW_COMMERCIAL.html  SLIDESHOW_DARPA.html
scap-core/: Cargo.toml
scap-core/src/: cbor.rs  crypto.rs  lib.rs  token.rs  types.rs
scap-core/tests/: test_vectors.rs
schemas/: README.md  scap.cddl  scrap.cddl  validate_examples.py
scrap-core/: Cargo.toml
scrap-ffi/: Cargo.toml
scrap-ffi/include/: scrap.h
scrap-ffi/src/: lib.rs
(+78 files in other folders)
