[package]
name = "scap-core"
version = "0.1.0"
edition = "2021"
description = "SCAP (Satellite Capability and Payment) protocol implementation"
license = "MIT"
repository = "https://github.com/dysonlabs/scap"

[features]
default = ["std"]
std = ["ciborium/std", "k256/std", "sha2/std", "zeroize/std"]

[dependencies]
# CBOR serialization (no_std compatible)
ciborium = { version = "0.2", default-features = false }

# Pure-Rust secp256k1 (no C toolchain). ECDSA signing/verification; k256 keys are
# ZeroizeOnDrop, so private-key material is wiped automatically on drop.
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "alloc"] }

# Explicit zeroization of any raw key buffers we hold transiently.
zeroize = { version = "1", default-features = false }

# Serde for derive macros
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# SHA256 hashing
sha2 = { version = "0.10", default-features = false }

# Hex encoding for test vectors
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
# For loading test vectors
serde_json = "1.0"
