[package]
name = "scrap-ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI bindings for SCRAP protocol"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
scrap-core = { path = "../scrap-core" }

[dev-dependencies]
hex = "0.4"

[build-dependencies]
cbindgen = "0.26"
